tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:53-12:54: error: application type mismatch
  PersistentHashMap.find? m
argument
  m
has type
  @PersistentHashMap Nat Nat instBEqNat instHashableNat : Type
but is expected to have type
  @PersistentHashMap Nat Nat instBEqNat natDiffHash : Type
phashmap_inst_coherence.lean:12:0-12:56: error: cannot evaluate code because '_eval._lambda_1' uses 'sorry' and/or contains errors
